added editing, added speech word

--- a/Dictionary/UI/Base/NavigationBar/NavigationBar.xib
+++ b/Dictionary/UI/Base/NavigationBar/NavigationBar.xib
@@ -22,7 +22,7 @@
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZcV-KV-EHQ" customClass="AccessibilityLabel" customModule="Dictionary" customModuleProvider="target">
                     <rect key="frame" x="60" y="33" width="350" height="44"/>
                     <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                    <color key="textColor" name="headerTitleColor"/>
+                    <color key="textColor" name="black"/>
                     <nil key="highlightedColor"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="minFontSize">
@@ -73,7 +73,7 @@
         </view>
     </objects>
     <resources>
-        <namedColor name="headerTitleColor">
+        <namedColor name="black">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
